--- a/web/templates/public_dashboard.html
+++ b/web/templates/public_dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <title>{{ token_name }} - Dashboard</title>
-    <link rel="stylesheet" href="/static/css/public_dashboard.css">
+    <link rel="stylesheet" href="/static/css/public_dashboard.css?v=1760815870">
 </head>
 <body>
     <!-- Audio Enable Overlay -->
