--- a/web/templates/status.html
+++ b/web/templates/status.html
@@ -26,7 +26,9 @@
         </a>
 
         <header class="status-header">
+            {% if token_name and token_name.upper() != 'NONE' %}
             <h1 class="status-title" data-text="{{ token_name }}">{{ token_name }}</h1>
+            {% endif %}
             <div class="overall-status" id="overallStatus">
                 <div class="status-indicator loading">
                     <span class="status-dot"></span>
